# cookiecutter-project

./: .pre-commit-config.yaml  cookiecutter.json  noxfile.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python.yml
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_bake_project.py  test_post_gen_hook.py  test_pre_gen_hook.py  utils.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}_cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: cli.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/cli/: __init__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/core/: __init__.py  logger.py
